feat: complete phase one backend
